native_test_app_1: added android lib and native_app_glue source in cmake file, added android_main in main.cpp

--- a/native_test_app_1/CMakeLists.txt
+++ b/native_test_app_1/CMakeLists.txt
@@ -2,21 +2,27 @@ cmake_minimum_required(VERSION 2.8)
 
 set(PROJECT_NAME native1)
 
+set(ANDROID_NATIVE_APP_GLUE_DIR
+    /home/pavel/android-ndk-r8/sources/android/native_app_glue
+    )
+
 include_directories(
     /home/pavel/android-ndk-r8/platforms/android-14/arch-arm/usr/include
-    /home/pavel/android-ndk-r8/sources/android/native_app_glue
+    ${ANDROID_NATIVE_APP_GLUE_DIR}
     /home/pavel/android-ndk-r8/toolchains/arm-linux-androideabi-4.4.3/prebuilt/linux-x86/lib/gcc/arm-linux-androideabi/4.4.3/include
     )
 link_directories(
+    /home/pavel/android-ndk-r8/platforms/android-14/arch-arm/usr/lib
     )
     
-set(ANDROID_LIBS log)
+set(ANDROID_LIBS log android)
 
-set(SOURCES 
+set(SOURCES
     jni/main.cpp
     jni/Log.cpp
     jni/EventLoop.cpp
+    ${ANDROID_NATIVE_APP_GLUE_DIR}/android_native_app_glue.c
     )
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
-target_link_libraries(${PROJECT_NAME} ${ANDROID_LIBS}) 
+target_link_libraries(${PROJECT_NAME} ${ANDROID_LIBS})
