native_test_app_2: added Activity handler, DroidBlaster, compile ok

--- a/native_test_app_2/CMakeLists.txt
+++ b/native_test_app_2/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-set(PROJECT_NAME native1)
+set(PROJECT_NAME native2)
 
 set(ANDROID_NATIVE_APP_GLUE_DIR
     /home/pavel/android-ndk-r8/sources/android/native_app_glue
@@ -21,6 +21,8 @@ set(SOURCES
     jni/main.cpp
     jni/Log.cpp
     jni/EventLoop.cpp
+    jni/ActivityHandler.cpp
+    jni/DroidBlaster.cpp
     ${ANDROID_NATIVE_APP_GLUE_DIR}/android_native_app_glue.c
     )
 
