--- a/native_test_app_5/.cproject
+++ b/native_test_app_5/.cproject
@@ -19,12 +19,17 @@
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration buildProperties="" id="com.android.toolchain.gcc.2042756205" name="Default" parent="org.eclipse.cdt.build.core.emptycfg">
+				<configuration buildProperties="" description="" id="com.android.toolchain.gcc.2042756205" name="Default" parent="org.eclipse.cdt.build.core.emptycfg">
 					<folderInfo id="com.android.toolchain.gcc.2042756205.1950603376" name="/" resourcePath="">
 						<toolChain id="com.android.toolchain.gcc.99084549" name="com.android.toolchain.gcc" superClass="com.android.toolchain.gcc">
 							<targetPlatform binaryParser="org.eclipse.cdt.core.ELF" id="com.android.targetPlatform.832173217" isAbstract="false" superClass="com.android.targetPlatform"/>
-							<builder id="com.android.builder.314634572" managedBuildOn="false" name="Android Builder.Default" superClass="com.android.builder"/>
-							<tool id="com.android.gcc.compiler.1614687710" name="Android GCC Compiler" superClass="com.android.gcc.compiler"/>
+							<builder id="com.android.builder.314634572" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Android Builder" superClass="com.android.builder"/>
+							<tool id="com.android.gcc.compiler.1614687710" name="Android GCC Compiler" superClass="com.android.gcc.compiler">
+								<option id="com.android.gcc.option.includePath.910748935" superClass="com.android.gcc.option.includePath" valueType="includePath">
+									<listOptionValue builtIn="false" value="/home/pavel/prj/android_tut/3rdparty/libpng-1.5.14"/>
+								</option>
+								<inputType id="com.android.gcc.inputType.497645475" superClass="com.android.gcc.inputType"/>
+							</tool>
 						</toolChain>
 					</folderInfo>
 				</configuration>
@@ -32,14 +37,17 @@
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
 		</cconfiguration>
 	</storageModule>
-	<storageModule moduleId="scannerConfiguration">
-		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-		<scannerConfigBuildInfo instanceId="com.android.toolchain.gcc.1746648251;com.android.toolchain.gcc.1746648251.518141997;com.android.gcc.compiler.1957754589;com.android.gcc.inputType.1017954123">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="com.android.AndroidPerProjectProfile"/>
-		</scannerConfigBuildInfo>
-	</storageModule>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
 		<project id="native_test_app_5.null.141105082" name="native_test_app_5"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
+	<storageModule moduleId="scannerConfiguration">
+		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		<scannerConfigBuildInfo instanceId="com.android.toolchain.gcc.2042756205;com.android.toolchain.gcc.2042756205.1950603376;com.android.gcc.compiler.1614687710;com.android.gcc.inputType.497645475">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="com.android.AndroidPerProjectProfile"/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="com.android.toolchain.gcc.1746648251;com.android.toolchain.gcc.1746648251.518141997;com.android.gcc.compiler.1957754589;com.android.gcc.inputType.1017954123">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="com.android.AndroidPerProjectProfile"/>
+		</scannerConfigBuildInfo>
+	</storageModule>
 </cproject>
