--- a/tools/AndroidManifest.xml
+++ b/tools/AndroidManifest.xml
@@ -14,7 +14,8 @@
         
         <activity 
             android:name="android.app.NativeActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             
             <meta-data android:name="android.app.lib_name"
                 android:value="native1"/>
