native_test_app_9: added opencv android suppord, chech fstream work fine

--- a/native_test_app_9/CMakeLists.txt
+++ b/native_test_app_9/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-set(PROJECT_NAME native8)
+set(PROJECT_NAME native9)
 
 set(ANDROID_NATIVE_APP_GLUE_DIR
     ${ANDROID_NDK}/sources/android/native_app_glue
@@ -9,12 +9,26 @@ set(ANDROID_NATIVE_APP_GLUE_DIR
 include_directories(
     ${ANDROID_NDK}/platforms/android-14/arch-arm/usr/include
     ${ANDROID_NATIVE_APP_GLUE_DIR}
-    ${ANDROID_NDK}/toolchains/arm-linux-androideabi-4.4.3/prebuilt/linux-x86/lib/gcc/arm-linux-androideabi/4.4.3/include
+    ${ANDROID_NDK}/toolchains/arm-linux-androideabi-4.7/prebuilt/linux-x86/include
+    /home/ingener/prj/opencv_android/OpenCV-2.4.3.2-android-sdk/sdk/native/jni/include
     )
 link_directories(
     ${ANDROID_NDK}/platforms/android-14/arch-arm/usr/lib
+    /home/ingener/prj/opencv_android/OpenCV-2.4.3.2-android-sdk/sdk/native/libs/armeabi-v7a
+    /home/ingener/prj/opencv_android/OpenCV-2.4.3.2-android-sdk/sdk/native/3rdparty/libs/armeabi-v7a
     )
-set(ANDROID_LIBS log android EGL GLESv1_CM)
+set(ANDROID_LIBS 
+    log 
+    android 
+    EGL 
+    GLESv1_CM
+    z
+    )
+set(OPENCV_LIBS 
+    opencv_core
+    opencv_highgui
+    tbb
+    )
 
 set(SOURCES
     jni/main.cpp
@@ -23,4 +37,4 @@ set(SOURCES
     )
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
-target_link_libraries(${PROJECT_NAME} ${ANDROID_LIBS})
+target_link_libraries(${PROJECT_NAME} ${ANDROID_LIBS} ${OPENCV_LIBS})
