native test app 9: native camera work

--- a/native_test_app_9/CMakeLists.txt
+++ b/native_test_app_9/CMakeLists.txt
@@ -10,12 +10,12 @@ include_directories(
     ${ANDROID_NDK}/platforms/android-14/arch-arm/usr/include
     ${ANDROID_NATIVE_APP_GLUE_DIR}
     ${ANDROID_NDK}/toolchains/arm-linux-androideabi-4.7/prebuilt/linux-x86/include
-    /home/ingener/prj/opencv_android/OpenCV-2.4.3.2-android-sdk/sdk/native/jni/include
+    /home/pavel/prj/OpenCV-2.4.4-android-sdk/sdk/native/jni/include
     )
 link_directories(
     ${ANDROID_NDK}/platforms/android-14/arch-arm/usr/lib
-    /home/ingener/prj/opencv_android/OpenCV-2.4.3.2-android-sdk/sdk/native/libs/armeabi-v7a
-    /home/ingener/prj/opencv_android/OpenCV-2.4.3.2-android-sdk/sdk/native/3rdparty/libs/armeabi-v7a
+    /home/pavel/prj/OpenCV-2.4.4-android-sdk/sdk/native/libs/armeabi-v7a
+    /home/pavel/prj/OpenCV-2.4.4-android-sdk/sdk/native/3rdparty/libs/armeabi-v7a
     )
 set(ANDROID_LIBS 
     log 
@@ -27,6 +27,8 @@ set(ANDROID_LIBS
 set(OPENCV_LIBS 
     opencv_core
     opencv_highgui
+    opencv_androidcamera
+    opencv_imgproc
     tbb
     libpng
     libjpeg
@@ -36,11 +38,12 @@ set(OPENCV_LIBS
     )
 
 set(SOURCES
+    ${ANDROID_NATIVE_APP_GLUE_DIR}/android_native_app_glue.c
     jni/main.cpp
     jni/GraphicsService.cpp
     jni/IGraphicsObject.cpp
     jni/Point.cpp
-    ${ANDROID_NATIVE_APP_GLUE_DIR}/android_native_app_glue.c
+    jni/Triangle.cpp
     )
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
