--- a/tools/AndroidManifest.xml
+++ b/tools/AndroidManifest.xml
@@ -5,6 +5,10 @@
 
     <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="15" />
 
+    <!-- GLES Version -->
+    <uses-feature android:glEsVersion="0x00010001"/>
+
+    <!-- android:hasCode="false" = for native activity -->
     <application 
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
@@ -12,20 +16,26 @@
         android:hasCode="false"
         android:debuggable="true">
         
-        <activity 
-            android:name="android.app.NativeActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
-            
-            <meta-data android:name="android.app.lib_name"
-                android:value="native1"/>
-            
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-                
-        </activity>
+		<activity 
+		    android:name="android.app.NativeActivity"
+		    android:label="@string/app_name"
+		    android:screenOrientation="portrait"
+                    >
+		    
+                    <!-- android:value="__name__" = here name is shared 
+                         library for native activity without lib on beginning
+                         and .so in end, for example original name of native1 is
+                         libnative1.so
+                    -->
+		    <meta-data android:name="android.app.lib_name"
+		        android:value="native1"/>
+		    
+		    <intent-filter>
+		        <action android:name="android.intent.action.MAIN"/>
+		        <category android:name="android.intent.category.LAUNCHER"/>
+		    </intent-filter>
+		        
+		</activity>
 
     </application>
 
