--- a/tools/AndroidManifest.xml
+++ b/tools/AndroidManifest.xml
@@ -7,6 +7,10 @@
 
     <!-- GLES Version -->
     <uses-feature android:glEsVersion="0x00010001"/>
+    
+    <!-- permissions for camera and sdcard io -->
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <!-- android:hasCode="false" = for native activity -->
     <application 
