--- a/opengles_app/CMakeLists.txt
+++ b/opengles_app/CMakeLists.txt
@@ -11,7 +11,7 @@ set(ANDROID_NATIVE_APP_GLUE_DIR
     )
     
 set(ANDROID_OPENCV_DIR
-    ${REPO_ROOT}/3rdparty/OpenCV-2.4.4-android-sdk/sdk/native    
+    ${REPO_ROOT}/3rdparty/OpenCV-2.4.4-android-sdk/sdk/native
     #/home/pavel/prj/android_tut/3rdparty/OpenCV-2.4.4-android-sdk/sdk/native
     )
 
@@ -20,12 +20,13 @@ include_directories(
     ${ANDROID_NATIVE_APP_GLUE_DIR}
     ${ANDROID_NDK}/toolchains/arm-linux-androideabi-4.7/prebuilt/linux-x86/include
     ${ANDROID_OPENCV_DIR}/jni/include
-    ${REPO_ROOT}/modules/libtools/include
+    ${REPO_ROOT}/modules/libtools/include    
     )
 link_directories(
     ${ANDROID_NDK}/platforms/android-14/arch-arm/usr/lib
     ${ANDROID_OPENCV_DIR}/libs/armeabi-v7a
-    ${ANDROID_OPENCV_DIR}/3rdparty/libs/armeabi-v7a
+    ${ANDROID_OPENCV_DIR}/3rdparty/libs/armeabi-v7a    
+    ${REPO_ROOT}/libs/armeabi-v7a
     )
 set(ANDROID_LIBS 
     log 
@@ -47,17 +48,21 @@ set(OPENCV_LIBS
     IlmImf
     )
     
-set(EXT_SOURCES
-    ${REPO_ROOT}/modules/libtools/src/IEventEngine.cpp
-    ${REPO_ROOT}/modules/libtools/src/IGraphicsService.cpp    
-    ${REPO_ROOT}/modules/libtools/src/IObject.cpp
-    ${REPO_ROOT}/modules/libtools/src/GLTriangle.cpp
-    ${REPO_ROOT}/modules/libtools/src/ITexture.cpp
-    ${REPO_ROOT}/modules/libtools/src/RGBTexture.cpp
-    ${REPO_ROOT}/modules/libtools/src/ICaptureService.cpp
-    ${REPO_ROOT}/modules/libtools/src/NullCapture.cpp
-    ${REPO_ROOT}/modules/libtools/src/OpenCVCapture.cpp     
+set(MY_LIBS
+    tools
     )
+    
+#set(EXT_SOURCES
+#    ${REPO_ROOT}/modules/libtools/src/IEventEngine.cpp
+#    ${REPO_ROOT}/modules/libtools/src/IGraphicsService.cpp    
+#    ${REPO_ROOT}/modules/libtools/src/IObject.cpp
+#    ${REPO_ROOT}/modules/libtools/src/GLTriangle.cpp
+#    ${REPO_ROOT}/modules/libtools/src/ITexture.cpp
+#    ${REPO_ROOT}/modules/libtools/src/RGBTexture.cpp
+#    ${REPO_ROOT}/modules/libtools/src/ICaptureService.cpp
+#    ${REPO_ROOT}/modules/libtools/src/NullCapture.cpp
+#    ${REPO_ROOT}/modules/libtools/src/OpenCVCapture.cpp     
+#    )
 
 set(SOURCES
     ${ANDROID_NATIVE_APP_GLUE_DIR}/android_native_app_glue.c
@@ -68,4 +73,4 @@ set(SOURCES
     )
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES} ${EXT_SOURCES})
-target_link_libraries(${PROJECT_NAME} ${ANDROID_LIBS} ${OPENCV_LIBS})
+target_link_libraries(${PROJECT_NAME} ${ANDROID_LIBS} ${OPENCV_LIBS} ${MY_LIBS})
