added opencv capture application

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 2.8)
 # apps
 add_subdirectory(01_empty_application)
 add_subdirectory(02_opengles10_app)
+add_subdirectory(03_opencv_capture_app)
