--- a/apps/03_opencv_capture_app/CMakeLists.txt
+++ b/apps/03_opencv_capture_app/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-set(PROJECT_NAME opencv_cap_app)
+set(PROJECT_NAME 03_opencv_capture_app)
 
 set(ANDROID_NATIVE_APP_GLUE_DIR
     ${ANDROID_NDK}/sources/android/native_app_glue
