--- a/apps/01_empty_application/CMakeLists.txt
+++ b/apps/01_empty_application/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-set(PROJECT_NAME empty_application)
+set(PROJECT_NAME 01_empty_application)
 
 set(ANDROID_NATIVE_APP_GLUE_DIR
     ${ANDROID_NDK}/sources/android/native_app_glue
