--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -4,3 +4,4 @@ cmake_minimum_required(VERSION 2.8)
 add_subdirectory(01_empty_application)
 add_subdirectory(02_opengles10_app)
 add_subdirectory(03_opencv_capture_app)
+add_subdirectory(04_opengles20_app)
