--- a/modules/libglestool/CMakeLists.txt
+++ b/modules/libglestool/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-set(PROJECT_NAME tools)
+set(PROJECT_NAME glestools)
 project(${PROJECT_NAME})
 
 include_directories(
@@ -8,22 +8,23 @@ include_directories(
 	${ANDROID_NDK}/sources/android/native_app_glue
 	${ANDROID_NDK}/toolchains/arm-linux-androideabi-4.7/prebuilt/linux-x86/include
 	${REPO_HOME}/3rdparty/OpenCV-2.4.4-android-sdk/sdk/native/jni/include
-	${REPO_HOME}/modules/libtools/include
+	${REPO_HOME}/modules/libglestool/include
+    ${REPO_HOME}/modules/libtools/include
 	)
 
 set(SOURCES 
-    src/AssetFileResource.cpp
-    src/CircleProcessor.cpp
-    src/CopyProcessor.cpp
-    src/FPSCalculator.cpp
-    src/ICaptureService.cpp
-    src/IEventEngine.cpp
-    src/IGraphicsService.cpp
-    src/IProcessor.cpp
-    src/IService.cpp
-    src/NullCapture.cpp
-    src/OpenCVCapture.cpp
-    )
+    src/AndroidGraphicBuffer.cpp
+    src/EGLDispatcher.cpp
+    src/FastEGLTexture.cpp
+    src/GLTriangle.cpp
+    src/IImageTexture.cpp
+    src/IObject.cpp
+    src/ITexture.cpp
+    src/RGB565Texture.cpp
+    src/RGBATexture.cpp
+    src/RGBTexture.cpp
+    src/GLMatrix4x4.cpp
+	)
 set(OPENCV_LIBS
     opencv_highgui
     opencv_androidcamera
