--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -11,25 +11,8 @@ cmake_minimum_required(VERSION 2.8)
 add_custom_target(
 	build_3rdparty
 
-	unzip ${CMAKE_CURRENT_LIST_DIR}/OpenCV-2.4.4-android-sdk.zip -d ${CMAKE_CURRENT_LIST_DIR} && 
+	unzip -n ${CMAKE_CURRENT_LIST_DIR}/OpenCV-2.4.4-android-sdk.zip -d ${CMAKE_CURRENT_LIST_DIR} && 
 	echo "================================" && 
 	echo "unzip OpenCV... done"             && 
-	echo "================================" #&&
-
-	#mkdir -p ${CMAKE_CURRENT_LIST_DIR}/opencv-2.4.4/build &&
-	#echo "================================" && 
-	#echo "create OpenCV/build... done"      && 
-	#echo "================================" &&
-
-	#cd ${CMAKE_CURRENT_LIST_DIR}/opencv-2.4.4/build && 
-
-	#cmake .. -DCMAKE_INSTALL_PREFIX=${IRWB_REPO_ROOT}/${CMAKE_SYSTEM_NAME}-build/3rdparty && 
-	#echo "================================" && 
-	#echo "cmake .. done "                   && 
-	#echo "================================" &&	
-
-	#make install                            &&
-	#echo "================================" &&
-	#echo "make install... done"             && 
-	#echo "================================"
+	echo "================================" 
 	)
