--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
 set(REPO_HOME ${CMAKE_CURRENT_LIST_DIR})
-#message("repo dir = "${REPO_HOME})
 
 # 3rdparty
 add_subdirectory(3rdparty)
@@ -11,3 +10,8 @@ add_subdirectory(modules)
 
 # apps
 add_subdirectory(apps)
+
+# dependencies
+add_dependencies(tools     build_3rdparty)
+add_dependencies(glestools build_3rdparty)
+add_dependencies(glestools build_3rdparty)
