libglestools: objloader work, new matrix type; opengles 2.0 application now work

--- a/modules/libglestool/CMakeLists.txt
+++ b/modules/libglestool/CMakeLists.txt
@@ -27,6 +27,7 @@ set(SOURCES
     src/OBJLoader.cpp
     src/Mesh.cpp
     src/IShaderProgram.cpp
+    src/ErrorHandler.cpp
 	)
 set(OPENCV_LIBS
     opencv_highgui
