--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.8)
 
 set(REPO_HOME ${CMAKE_CURRENT_LIST_DIR})
 
+message(STATUS, "android ndk directory = ${ANDROID_NDK}")
+
 # 3rdparty
 add_subdirectory(3rdparty)
 
