clean cmake build system

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -3,3 +3,5 @@ cmake_minimum_required(VERSION 2.8)
 add_subdirectory(libtools)
 add_subdirectory(libglestool)
 add_subdirectory(libaruco)
+
+add_dependencies(glestools tools)
