--- a/modules/libaruco/CMakeLists.txt
+++ b/modules/libaruco/CMakeLists.txt
@@ -1,34 +1,16 @@
-cmake_minimum_required(VERSION 2.8) 
+cmake_minimum_required(VERSION 2.8)
 
 set(PROJECT_NAME aruco)
 project(${PROJECT_NAME})
 
-include_directories(
-	${ANDROID_NDK}/platforms/android-14/arch-arm/usr/include
-	${ANDROID_NDK}/sources/android/native_app_glue
-	${ANDROID_NDK}/toolchains/arm-linux-androideabi-4.7/prebuilt/linux-x86/include
-	${REPO_HOME}/3rdparty/OpenCV-2.4.4-android-sdk/sdk/native/jni/include
-	${REPO_HOME}/modules/libtools/include
-	)
-	
-link_directories(
-    ${REPO_HOME}/3rdparty/OpenCV-2.4.4-android-sdk/sdk/native/libs/armeabi-v7a
-    )
-	
-set(SOURCES 
-  src/arucofidmarkers.cpp
-  src/board.cpp
-  src/boarddetector.cpp
-  src/cameraparameters.cpp
-  src/cvdrawingutils.cpp
-  src/marker.cpp
-  src/markerdetector.cpp
-  )
-  
-set(LIBS
-  z
-  )
-set(OPENCV_LIBS 
+include_directories(${ANAT_INCLUDE})
+link_directories(${ANAT_LINK})
+
+file(GLOB SOURCES src/*.cpp)
+
+set(ANDROID_LIBS z)
+
+set(OPENCV_LIBS
   opencv_core
   opencv_highgui
   opencv_androidcamera
@@ -37,14 +19,14 @@ set(OPENCV_LIBS
   opencv_calib3d
   opencv_flann
   opencv_legacy
-  
+
   IlmImf
   libjasper
   libjpeg
   libpng
   libtiff
-  tbb  
+  tbb
   )
-  
+
 add_library(${PROJECT_NAME} ${SOURCES})
-target_link_libraries(${PROJECT_NAME} ${LIBS} ${OPENCV_LIBS})
+target_link_libraries(${PROJECT_NAME} ${ANDROID_LIBS} ${OPENCV_LIBS})
