--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 
-set(REPO_HOME ${CMAKE_CURRENT_LIST_DIR})
+include(anat_tools.cmake)
 
-message(STATUS, "android ndk directory = ${ANDROID_NDK}")
+message("android ndk directory = ${ANDROID_NDK}")
 
 # 3rdparty
 add_subdirectory(3rdparty)
@@ -16,4 +16,4 @@ add_subdirectory(apps)
 # dependencies
 add_dependencies(tools     build_3rdparty)
 add_dependencies(glestools build_3rdparty)
-add_dependencies(glestools build_3rdparty)
+add_dependencies(aruco     build_3rdparty)
